# A2AWalkthrough

./: .gitignore  1. BasicQA.py  1. BasicRAG.py  1. RAG via CrewAI.py  1_BasicQA.ipynb  2. A2AServer-PolicyAgent.py  2. A2AServer.py  2. CrewAI via Server.py  2_A2AServer-PolicyAgent.ipynb  3. A2AClient.py  3. ACP client to CrewAI Server.py  3_A2AClient.ipynb  4. ADKA2A-ResearchAgent.py  4. smolagents A2A.py  4. smolagents ACP.py  4_ADKA2A-ResearchAgent.ipynb  5. ADKSequentialAgent.py  5. Chained Agents.py  5_ADKSequentialAgent.ipynb  6. A2AxMCPLangGraph-ProviderAgent.py  6. A2AxMCPMicrosoft-ProviderAgent.py  6. A2AxMCPPydantic-ProviderAgent.py  6. ACPCallingAgent.py  6. ADKCallingAgent.py  6_A2AxMCPLangGraph.ipynb  7. A2AMicrosoftClient.py  7. A2AxMCP Client.py  7. A2AxMCP.py  7. ACPxMCP.py  7_A2AMicrosoftClient.ipynb  8. ACPxMCP Client.py  8. ADKCallingAgent.py  8. ADKMultiAgent.py  8. BeeAIRequirementAgent.py  8_BeeAIRequirement.ipynb  9. BeeAIClient.py  MonitorSetup.ipynb  README.md  a2a_healthcare_agent.py  a2a_policy_agent.py  (+13 more)
L2/: BasicQA.ipynb
L3/: A2AServer-PolicyAgent.ipynb  a2a_policy_agent.py
L4/: A2AClient.ipynb
L5/: ADKA2A-ResearchAgent.ipynb  a2a_research_agent.py
L6/: ADKSequentialAgent.ipynb
L7/: A2AxMCPLangGraph.ipynb  a2a_provider_agent.py
L8/: A2AMicrosoftClient.ipynb
L9/: BeeAIRequirement.ipynb  agents.py
agents/: a2a_healthcare_agent.py  a2a_policy_agent.py  a2a_provider_agent.py  a2a_research_agent.py  helpers.py  policy_agent.py
data/: doctors.json
experiments/: 1. BasicRAGADK.py
