[project]
name = "acpclient"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-cloud-aiplatform",
    "anthropic[vertex]",
    "google-genai",
    "google-adk[a2a]",
    "a2a-sdk[http-server]>=0.3.0",
    "mcp>=1.7.1",
    "smolagents[litellm,mcp,toolkit]>=1.14.0,<1.19.0",
    "rich",
]
